--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,6 +11,7 @@
 
   <body>
     <div class="page">
+      <!-- Agrupe todo o conteúdo da página em uma nova div com a classe page. Lembre-se de adicionar a tag de fechamento -->
       <header class="header">
         <nav class="nav">
           <img
@@ -18,18 +19,19 @@
             alt="Logotipo da Biblioteca Triple Peaks"
             class="nav__logo"
           />
+          <!-- Colocar links de navegação em uma lista é supostamente a melhor prática para escrever o código semântico, pois permite que os leitores de tela façam uma pausa entre cada link em vez de ler todos os links como uma frase. -->
           <ul class="nav__links">
             <li>
-              <a class="nav__link" href="#staff">Escolhas do leitor</a>
+              <a class="nav__link" href="#staff">Escolhas da Equipe</a>
             </li>
             <li>
               <a class="nav__link" href="#events">Eventos</a>
             </li>
             <li>
-              <a class="nav__link">Seja um membro</a>
+              <a class="nav__link" href="#membership">Seja um membro</a>
             </li>
             <li>
-              <a class="nav__link">Contatos</a>
+              <a class="nav__link" href="#footer">Contatos</a>
             </li>
           </ul>
         </nav>
@@ -38,9 +40,9 @@
             <h1 class="header__title">Bem-vindo à Biblioteca Triple Peaks</h1>
             <p class="header__description">
               Temos o prazer de abrir as portas da nossa biblioteca a todos!
-              <br />Venha expandir seus conhecimentos de desenvolvimento, ou
-              apenas use esse belo local para trabalhar ou estudar. Esse é um
-              lugar legal para estudantes legais!
+              Venha expandir seus conhecimentos de desenvolvimento, ou apenas
+              use esse belo local para trabalhar ou estudar. Esse é um lugar
+              legal para estudantes legais!
             </p>
           </div>
           <img
@@ -53,10 +55,11 @@
           <p class="header__address">Triple Peaks, 200 Success Avenue</p>
         </div>
       </header>
+
       <main class="content">
         <section class="staff" id="staff">
-          <h2 class="staff__title">Escolhas do leitor</h2>
-          <p class="staff__subtitle">O que eu gosto</p>
+          <h2 class="staff__title">Escolhas da Equipe</h2>
+          <p class="staff__subtitle">Que nossos leitores adoram</p>
           <ul class="staff__cards">
             <li class="card">
               <div class="card__content">
@@ -129,95 +132,189 @@
             </li>
           </ul>
         </section>
-
-
         <section class="events" id="events">
-   <div class="events__content">
-    <h2 class="events__heading">Próximos eventos:</h2>
-    <h3 class="events__title">
-     Em homenagem à Joan Feynman: Mulheres na Astrofísica
-    </h3>
-    <div class="event-info events__info-section">
-      <div class="event-info__item">
-        <img
-          src="./images/icon_calendar.svg"
-          alt="Calendar icon"
-          class="event-info__icon"
-        />
-        <p class="event-info__text">Segunda-feira, 12 de janeiro</p>
-      </div>
-      <div class="event-info__item">
-        <img
-          src="./images/icon_pin.svg"
-          alt="Pin icon"
-          class="event-info__icon"
-        />
-        <p class="event-info__text">
-          Sala de Conferências da Biblioteca Triple Peaks e Online
-        </p>
-      </div>
-    </div>
-    <p class="events__description">
-      Neste evento, que homenageia a pessoa que inspirou o nome da biblioteca, vamos ter uma
-      palestra que vai nos levar para uma jornada explorando alguns das pesquisadoras mais
-      proeminentes no mundo da ciência espacial. É
-      fácil aceitar o equívoco de que esse campo era em sua maioria
-      dominado por homens, mas nossa palestra visa mudar essa noção e
-      provar que esse não é o caso desde, pelo menos,
-      o século XVIII.
-    </p>
-    <a href="#" class="events__more">Mais eventos &rarr;</a>
-  </div>
-  <div class="events__cover">
-<img
-    src="./images/cafe.png"
-    alt="foto da direita"
-    class="events__image"
-    />
-   <div class="person person_name_feynman">
-    <p class="person__caption">Joan Feynman</p>
-   <img
-   src="./images/person_feynman.png"
-   alt="Primeira"
-   class="person__image person__image_size_l"
-    />
-  </div>
-  <div class="person person_name_burbidge">
-    <p class="person__caption">Margaret Burbidge</p>
-    <img
-      src="./images/person_burbidge.png"
-      alt="Margaret Burbidge"
-      class="person__image person__image_size_m"
-    />
-  </div>
-  <div class="person person_name_cannon">
-    <img
-      src="./images/person_cannon.png"
-      alt="Annie Jump Cannon"
-      class="person__image person__image_size_m"
-    />
-    <p class="person__caption">Annie Jump Cannon</p>
-  </div>
-  <div class="person person_name_mitchell">
-    <img
-      src="./images/person_mitchell.png"
-      alt="Maria Mitchell "
-      class="person__image person__image_size_s"
-    />
-    <p class="person__caption">Maria Mitchell</p>
-  </div>
-  <div class="person person_name_tarter">
-    <p class="person__caption">Jill Tarter</p>
-    <img
-      src="./images/person_tarter.png"
-      alt="Jill Tarter "
-      class="person__image person__image_size_m"
-    />
-  </div>
-  </div>
-   
+          <div class="events__content">
+            <h2 class="events__heading">Próximos eventos:</h2>
+            <h3 class="events__title">
+              Em homenagem à Joan Feynman: Mulheres na Astrofísica
+            </h3>
+            <div class="event-info events__info-section">
+              <div class="event-info__item">
+                <img
+                  src="./images/icon_calendar.svg"
+                  alt="Calendar icon"
+                  class="event-info__icon"
+                />
+                <p class="event-info__text">Segunda-feira, 12 de janeiro</p>
+              </div>
+              <div class="event-info__item">
+                <img
+                  src="./images/icon_pin.svg"
+                  alt="Pin icon"
+                  class="event-info__icon"
+                />
+                <p class="event-info__text">
+                  Sala de Conferências da Biblioteca Triple Peaks e Online
+                </p>
+              </div>
+            </div>
+            <p class="events__description">
+              Neste evento, que homenageia a pessoa que inspirou o nome da
+              biblioteca, vamos ter uma palestra que vai nos levar para uma
+              jornada explorando alguns das pesquisadoras mais proeminentes no
+              mundo da ciência espacial. É fácil aceitar o equívoco de que esse
+              campo era em sua maioria dominado por homens, mas nossa palestra
+              visa mudar essa noção e provar que esse não é o caso desde, pelo
+              menos, o século XVIII.
+            </p>
+            <a href="#" class="events__more">Mais eventos &rarr;</a>
+          </div>
+          <!-- Comece a criar a composição aqui -->
+          <div class="events__cover">
+            <img src="./images/cafe.png" alt="cafe" class="events__image" />
+            <div class="person person_name_feynman">
+              <p class="person__caption">Joan Feynman</p>
+              <img
+                src="./images/person_feynman.png"
+                alt="Joan Feynman"
+                class="person__image person__image_size_l"
+              />
+            </div>
+            <div class="person person_name_burbidge">
+              <p class="person__caption">Margaret Burbidge</p>
+              <img
+                src="./images/person_burbidge.png"
+                alt="Margaret Burbidge"
+                class="person__image person__image_size_m"
+              />
+            </div>
+            <div class="person person_name_cannon">
+              <img
+                src="./images/person_cannon.png"
+                alt="Annie Jump Cannon"
+                class="person__image person__image_size_m"
+              />
+              <p class="person__caption">Annie Jump Cannon</p>
+            </div>
+            <div class="person person_name_mitchell">
+              <img
+                src="./images/person_mitchell.png"
+                alt="Maria Mitchell "
+                class="person__image person__image_size_s"
+              />
+              <p class="person__caption">Maria Mitchell</p>
+            </div>
+            <div class="person person_name_tarter">
+              <p class="person__caption">Jill Tarter</p>
+              <img
+                src="./images/person_tarter.png"
+                alt="Jill Tarter "
+                class="person__image person__image_size_m"
+              />
+            </div>
+          </div>
+        </section>
+        <section class="membership" id="membership">
+          <h2 class="membership__title">
+            Tornar-se membro da biblioteca é fácil!
+          </h2>
+          <ul class="membership__steps">
+            <li class="step">
+              <h3 class="step__title">
+                Passo 1
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Preencha o formulário de filiação online ou pessoalmente.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Passo 2
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Venha retirar seu cartão da biblioteca na recepção.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Passo 3
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">Assine o verso do cartão.</p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Passo 4
+                <img
+                  src="./images/icon_step_finish.svg"
+                  alt="icon finish"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Aproveite todos os benefícios incríveis!
+              </p>
+            </li>
+          </ul>
         </section>
       </main>
+      <footer class="footer" id="footer">
+        <div class="footer__columns">
+          <div class="footer__column">
+            <img
+              src="./images/logo_white.svg"
+              alt="Triple logo"
+              class="footer__logo"
+            />
+          </div>
+          <div class="footer__column footer__column_content_hours">
+            <h3 class="footer__column-heading">Horário de Funcionamento</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">Dias úteis: 9h - 20h</li>
+              <li class="footer__list-item">Finais de semana: 10h às 18h</li>
+            </ul>
+          </div>
+          <div class="footer__column footer__column_content_social">
+            <h3 class="footer__column-heading">Redes Sociais</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a class="footer__column-link" href="#">
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="facebook logo"
+                    class="footer__social-icon"
+                  />Facebook</a
+                >
+              </li>
+              <li class="footer__list-item">
+                <a class="footer__column-link" href="#">
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="Instagram logo"
+                    class="footer__social-icon"
+                  />
+                  Instagram</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">© 2024 Guilherme Arroyo</p>
+      </footer>
     </div>
   </body>
 </html>
